--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
 	<modules>
 		<module>devutility.test.springcloud.producer</module>
 		<module>devutility.test.springcloud.eureka</module>
+		<module>devutility.test.springcloud.consumer</module>
 	</modules>
 </project>
