--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 		<version>2.0.4.RELEASE</version>
 		<relativePath />
 	</parent>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<spring-cloud-version>1.4.5.RELEASE</spring-cloud-version>
+	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
