--- a/devutility.test.springcloud.consumer/pom.xml
+++ b/devutility.test.springcloud.consumer/pom.xml
@@ -17,6 +17,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<!-- spring cloud end -->
 		<!-- com.github.eagle6688 -->
 		<dependency>
@@ -26,4 +30,12 @@
 		</dependency>
 		<!-- com.github.eagle6688 end -->
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
