--- a/devutility.test.springcloud.producer/pom.xml
+++ b/devutility.test.springcloud.producer/pom.xml
@@ -32,4 +32,12 @@
 		</dependency>
 		<!-- devutility end -->
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
