--- a/devutility.test.springcloud.consumer.hystrix/pom.xml
+++ b/devutility.test.springcloud.consumer.hystrix/pom.xml
@@ -5,7 +5,7 @@
 		<artifactId>devutility.test.springcloud</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>devutility.test.springcloud.consumer</artifactId>
+	<artifactId>devutility.test.springcloud.consumer.hystrix</artifactId>
 	<dependencies>
 		<!-- spring cloud -->
 		<dependency>
@@ -20,6 +20,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+		</dependency>
 		<!-- spring cloud end -->
 		<!-- com.github.eagle6688 -->
 		<dependency>
@@ -29,12 +37,4 @@
 		</dependency>
 		<!-- com.github.eagle6688 end -->
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 </project>
