--- a/devutility.test.springcloud.consumer.hystrix/pom.xml
+++ b/devutility.test.springcloud.consumer.hystrix/pom.xml
@@ -37,4 +37,12 @@
 		</dependency>
 		<!-- com.github.eagle6688 end -->
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
