--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>2.1.6.RELEASE</version>
 		<relativePath />
 	</parent>
 	<properties>
@@ -17,13 +17,25 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<!-- Spring -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Finchley.SR1</version>
+				<version>Greenwich.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- Spring end -->
+
+			<!-- devutility -->
+			<dependency>
+				<groupId>com.github.eagle6688</groupId>
+				<artifactId>devutility.external</artifactId>
+				<version>1.1.5</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!-- devutility end -->
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
@@ -38,6 +50,19 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- Spring Boot end -->
+
+		<!-- Spring Cloud -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Spring Cloud end -->
+
+		<dependency>
+			<groupId>com.github.eagle6688</groupId>
+			<artifactId>devutility.internal</artifactId>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>devutility.test.springcloud.producer</module>
