--- a/devutility.test.springcloud.feign/pom.xml
+++ b/devutility.test.springcloud.feign/pom.xml
@@ -12,6 +12,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
 		<!-- spring cloud end -->
 	</dependencies>
 </project>
