--- a/devutility.test.springcloud.feign/pom.xml
+++ b/devutility.test.springcloud.feign/pom.xml
@@ -16,6 +16,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+			<version>0.9.0.RELEASE</version>
+		</dependency>
 		<!-- spring cloud end -->
 	</dependencies>
 </project>
