Finish retry configuration for UnknowHost and NotFound

--- a/devutility.test.springcloud.feign/src/main/resources/application.properties
+++ b/devutility.test.springcloud.feign/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.application.name=spring-cloud-feign
+spring.application.name=devutility-test-spring-cloud-feign
 server.port=9005
-
-#feign.hystrix.enabled=false
