--- a/devutility.test.springcloud.feign/src/main/resources/application.properties
+++ b/devutility.test.springcloud.feign/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=devutility-test-spring-cloud-feign
 server.port=9005
+
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=5000
