--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.eagle6688</groupId>
-			<artifactId>devutility.test</artifactId>
+			<artifactId>devutility.test.spring</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 		<!-- devutility end -->
 	</dependencies>
