--- a/devutility.test.springcloud.producer/pom.xml
+++ b/devutility.test.springcloud.producer/pom.xml
@@ -8,10 +8,10 @@
 	<artifactId>devutility.test.springcloud.producer</artifactId>
 	<dependencies>
 		<!-- Spring -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
