Correct feign timeout configuration.

--- a/devutility.test.springcloud.feign/src/main/resources/application.properties
+++ b/devutility.test.springcloud.feign/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=devutility-test-spring-cloud-feign
 server.port=9005
 
-feign.client.config.default.connectTimeout=3000
-feign.client.config.default.readTimeout=3000
+feign.client.config.default.connect-timeout=3000
+feign.client.config.default.read-timeout=3000
