Remove external package and update Feign configuration.

--- a/devutility.test.springcloud.feign/src/main/resources/application.properties
+++ b/devutility.test.springcloud.feign/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=9005
 
 feign.client.config.default.connect-timeout=3000
 feign.client.config.default.read-timeout=3000
+
+feign.custom.config.enabled=true
+feign.custom.config.period=2000
+feign.custom.config.maxPeriod=4000
+feign.custom.config.maxAttempts=5
