Add logging level

--- a/devutility.test.springcloud.feign/src/main/resources/application.properties
+++ b/devutility.test.springcloud.feign/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=9005
 
 feign.client.config.default.connect-timeout=3000
 feign.client.config.default.read-timeout=3000
+feign.client.config.default.logger-level=basic
 
 feign.custom.config.enabled=true
 feign.custom.config.period=2000
